# manimlib

./: .gitignore  README.md  pyproject.toml
examples/: AnimateCharacter.py  LittleCharacter.py  ableitung.py  littlegreenguy.py  littleguy.py
manimlib/: config.py  plots.py  texts.py
scenes/: basic_scenes.py
